--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "7.26.3",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "3.3.1",
