--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "react-dom": "18.3.1",
     "styled-components": "6.1.15"
   },
+  "engines": {
+  "node": "16.x",
+  "npm": "latest"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "7.26.8",
     "@babel/preset-env": "7.26.8",
