--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "engines": {
   "node": "16.x",
-  "npm": "latest"
+  "npm": "11.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.26.8",
